Removes the shifting of menus on hover. fixes #3

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -251,7 +251,6 @@ ul#nav li a:hover {
     background-image: url('/images/hover.png');
     background-repeat: no-repeat;
     background-position: center top;
-    overflow: visible;
 }
 ul#nav li a:active {
     position: relative;
